--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,6 @@
   "invalidDate": "Invalid Date",
   "required": "Required",
   "invalidEmail": "Invalid Email",
-  "maxLengthOfFieldName": "Max length of {{fieldName}} is not more than {{max}}"
+  "maxLengthOfFieldName": "Max length of {{fieldName}} is not more than {{max}}",
+  "invalidPassword": "Invalid Password"
 }
