update password-input, add base-form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,5 +3,23 @@
   "required": "Required",
   "invalidEmail": "Invalid Email",
   "maxLengthOfFieldName": "Max length of {{fieldName}} is not more than {{max}}",
-  "invalidPassword": "Invalid Password"
+  "invalidPassword": "Invalid Password",
+  "invalidConfirmPassword": "Invalid Confirmation Password",
+  "maxLength": "Max length",
+  "minLength": "Min length",
+  "EmployeefullName": "Full Name",
+  "EmployeeDepartments": "Departments",
+  "EmployeeDOB": "Date of birth",
+  "EmployeeAge": "Age",
+  "EmployeePhone": "Phone",
+  "EmployeeEmail": "Email",
+  "EmployeePassword": "Password",
+  "EmployeeCreating": "Create Employee",
+  "EmployeeEditing": "Edit Employee",
+  "submit": "Submit",
+  "cancel": "Cancel",
+  "HOME": {
+    "TITLE": "Hello Angular with ngx-translate!",
+    "SELECT": "Change language"
+  }
 }
